Fix alignement of theme list

--- a/src/app/inquiry-form/components/detail/detail.component.scss
+++ b/src/app/inquiry-form/components/detail/detail.component.scss
@@ -11,5 +11,5 @@
 }
 
 md-list {
-  padding: 0 18px;
+  padding: 0 8px;
 }
